examples/neg/lambdas/closure.effekt
def twice { someBlock: () => Unit / {} } = {
  box { someBlock(); someBlock() }
}
effect Yield(): Unit
def main() = {
  val f = try { // @Yield =>
    val g = box { do Yield() }
    twice {
      def unboxed() = { g() };
      unboxed()// (@Yield)
    }
  } with Yield { println("yielded!"); resume(()) }
  f()
}
